--- a/static/styles/queries.css
+++ b/static/styles/queries.css
@@ -310,7 +310,6 @@ Instead, 1 rem = 1em = 16px*/
     height: unset;
   }
   .banorte--img {
-    margin-top: 0;
   }
   .vestimenta-container {
     gap: 12rem;
